[tool.poetry]
name = "cccommons"
version = "1.0.0"
description = ""
authors = ["philipp.wolters <philipp.wolters@codecentric.de>"]

[tool.poetry.dependencies]
python = ">=3.6.0, <3.9"
opencv-python = "^4.5.1"
numpy = "^1.19.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
    | \.git          # root of the project
    | \.venv
    | dist
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

